# practical-rust-projects

./: LICENSE.txt  README.md
blink-cross-compile/src/: main.rs
cat_volleyball/: Cargo.toml
cat_volleyball/assets/texture/: spritesheet (1).json  spritesheet.json  spritesheet.ron
cat_volleyball/resources/: display_config.ron
cat_volleyball/src/: catvolleyball.rs  main.rs
cat_volleyball/src/systems/: bounce.rs  player.rs
cli/catsay/: Cargo.toml  README.md  cat_1.txt
cli/catsay/src/: bench.rs  main.rs
cli/catsay/tests/: integration_test.rs
game/cat_volleyball/: .gitignore
game/cat_volleyball/resources/: bindings_config.ron
game/cat_volleyball/src/: audio.rs
game/cat_volleyball/src/systems/: mod.rs  move_balls.rs  winner.rs
game/cat_volleyball/texture/: spritesheet.ron
gui/catsay-gui/: Cargo.toml  README.md  layout.glade
gui/catsay-gui-glade/: Cargo.toml
gui/catsay-gui-glade/src/: #layout.glade#  layout.glade  layout.glade~  main.rs  main.rs.bk
gui/catsay-gui/src/: main.rs
gui/catsay-tui/: Cargo.toml  README.md
gui/catsay-tui/src/: main.rs
machine-learning/cat-breed-k-means/: Cargo.toml  README.md  cat_breed.md  run.sh
machine-learning/cat-breed-k-means/config/: generate.toml  generate2.toml
machine-learning/cat-or-dog-nnet/: Cargo.toml  run.sh
physical/blink-cross-compile/: Cargo.toml
physical/physical-computing/: Cargo.toml  sysfs.sh
physical/physical-computing/examples/: auto-blink.rs  button-debounce.rs  button.rs  led-on.rs  manual-blink.rs
