[package]
name = "cat-breed-k-means"
version = "0.1.0"
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
edition = "2018"

[dependencies]
rusty-machine = "0.5.4"
csv = "1.1"
rand = "0.7.0"
rand_distr = "0.2.1"
gnuplot = "0.0.31"
toml = "0.5.5"
serde = { version =  "1.0.103", features = ["derive"] }
structopt = "0.3.5"
